@@ -1,6 +1,9 @@
 Version 1.6.0-dev
-  * Add CORS support
-  * Fix issue when dealing with Array in JavaScript support
+  * Add the MapServer 7.0.1 internal support.
+  * Support for exotic location of openssl.
+  * Add ZOO-Client API documentation reference in the official documentation.
+  * Add CORS support.
+  * Fix issue when dealing with Array in JavaScript support.
   * Update the Centos installation procedure.
   * Small fixes in java support.
   * Fix issue when XML request contains empty nodes for inputs
